created new div for answer and output

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 </head>
 <body>
     <header class="title" style="font-family: 'Henny Penny', cursive;">Merkeb's Magic 8 ball</header>
-    <div class="content" id="content">
+    <form class="content">
         <p id="info">Ask me anthing!</p>
         <input type="text" id="question">
         <br>
         <button>Ask</button>
         <br>
-        <div id="answers" class="answers"></div>
+    </form>
+    <div id="output" class="output"></div>
+    <div id="answers" class="answers"></div>
     </div>
 
 </body>
