added images to folder and added stand in image

--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
         <br>
     </form>
     <div id="output" class="output"></div>
-    <div id="answers" class="answers"></div>
+    <br>
+    <div id="answers" class="answers">
+        <img src="./images/magic8ball_start.png" alt="">
     </div>
+    
+    <script src="./JS/script.js"></script>
+
 
 </body>
 </html>
