added styling to the page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="title" style="font-family: 'Henny Penny', cursive;">Merkeb's Magic 8 ball</header>
     <form class="content">
-        <p id="info">Ask me anthing!</p>
+        <h1 id="info">Ask me anthing!</p>
         <input type="text" id="question">
         <br>
         <button>Ask</button>
