changes to the styling and alignment

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header class="title" style="font-family: 'Henny Penny', cursive;">Merkeb's Magic 8 ball</header>
     <form class="content">
         <h1 id="info">Ask me anthing!</p>
-        <input type="text" id="question">
+        <input type="text" id="question" class="input">
         <br>
-        <button>Ask</button>
+        <button class="ask" name="ask">Ask</button>
         <br>
     </form>
     <div id="output" class="output"></div>
