added another button to reset the page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <br>
     </form>
     <div id="output"></div>
+    <button class="again" name="again"><a href="index.html">Ask Again</a></button>
+
     <br>
     <div id="answers" class="answers">
         <img src="./images/magic8ball_start.png" alt="">
