--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="/Images/">
+    <link rel="stylesheet" href="/CSS/styles.css" type="text/css">
+    <!--<link rel="stylesheet" href="/Images/">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
@@ -24,20 +24,9 @@
     <button class="again" name="again"><a href="index.html">Ask Again</a></button>
 
     <br>
-    <div id="answers" class="answers">
-        <img src="./images/magic8ball_start.png" alt="">
-        <img src="./images/magic8ball_1.png" alt="" id="one" class="hidden">
-        <img src="./images/magic8ball_2.png" alt="" id="two" class="hidden" > 
-        <img src="./images/magic8ball_3.png" alt="" id="three" class="hidden"> 
-        <img src="./images/magic8ball_4.png" alt="" id="four" class="hidden"> 
-        <img src="./images/magic8ball_5.png" alt="" id="five" class="hidden"> 
-        <img src="./images/magic8ball_6.png" alt="" id="six" class="hidden"> 
-        <img src="./images/magic8ball_7.png" alt="" id="seven" class="hidden"> 
-        <img src="./images/magic8ball_8.png" alt="" id="eight" class="hidden"> 
-
-    </div>
+    <div id="answers" class="answers"></div>
     
-    <script src="./JS/script.js"></script>
+    <script type="text/javascript" src="./JS/script.js"></script>
 
 
 </body>
